--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "angular": "1.4.9",
     "angularAMD": "^0.2.1",
-    "requirejs": "~2.1.20"
+    "angular-ui-router": "~0.2.15",
+    "requirejs": "~2.1.20",
+    "bulma": "~0.3.1"
   },
   "resolutions": {
     "angular": "1.4.9"
