--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "angularAMD": "^0.2.1",
     "angular-ui-router": "~0.2.15",
     "requirejs": "~2.1.20",
-    "bulma": "~0.3.1"
+    "bulma": "~0.3.1",
+    "requirejs-text": "~2.0.14"
   },
   "resolutions": {
     "angular": "1.4.9"
