--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,9 @@
     "angular-ui-router": "~0.2.15",
     "requirejs": "~2.1.20",
     "bulma": "~0.3.1",
-    "requirejs-text": "~2.0.14"
+    "requirejs-text": "~2.0.14",
+    "ngmap": "^1.17.8",
+    "angular-resource": "1.5.9"
   },
   "resolutions": {
     "angular": "1.4.9"
