--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "bulma": "~0.3.1",
     "requirejs-text": "~2.0.14",
     "ngmap": "^1.17.8",
-    "angular-resource": "1.5.9"
+    "angular-resource": "1.5.9",
+    "pusher-js": "pusher#~4.0.0"
   },
   "resolutions": {
     "angular": "1.4.9"
