--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,9 @@
     "requirejs-text": "~2.0.14",
     "ngmap": "^1.17.8",
     "angular-resource": "1.5.9",
-    "pusher-js": "pusher#~4.0.0"
+    "pusher-js": "pusher#~4.0.0",
+    "ui-leaflet": "^2.0.0",
+    "angular-simple-logger": "^0.1.7"
   },
   "resolutions": {
     "angular": "1.4.9"
