--- a/bower.json
+++ b/bower.json
@@ -22,11 +22,12 @@
     "requirejs": "~2.1.20",
     "bulma": "~0.3.1",
     "requirejs-text": "~2.0.14",
-    "ngmap": "^1.17.8",
     "angular-resource": "1.5.9",
     "pusher-js": "pusher#~4.0.0",
     "ui-leaflet": "^2.0.0",
-    "angular-simple-logger": "^0.1.7"
+    "ngmap": "^1.17.8",
+    "angular-simple-logger": "^0.1.7",
+    "requirejs-plugins": "~1.0.3"
   },
   "resolutions": {
     "angular": "1.4.9"
